2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Minor changes in the tests.

2007-06-23  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Iterate over all XML files inside
	  Examples directory. Added perfomance test for Deserialize and
	  Serialize methods.
	* DocumentBufferArchiver.cs: Minor Change.
	* Monodoc.Editor.Gui.mdp, Test/Examples/WindowType.xml: Added
	  WindowType document XML for tests.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/Examples/WrapMode.xml: Added markup for empty elements
	* DocumentBufferArchiver.cs: Added case in Deserialize for empty
	  elements.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs, Monodoc.Editor.Gui.mdp: Added
	  Test for DocumentBufferArchiver, added a test for Serialize method.
	* Test/Examples/WrapMode.xml: Removed all empty elements that we are
	  not creating for the time being.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs, Monodoc.Editor.Gui.mdp: Added
	  Test for DocumentBufferArchiver, added a test for Serialize method.
	* Test/Examples/WrapMode.xml: Removed all empty elements that we are
	  not creating for the time being.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test, Test/Examples, Test/Examples/WrapMode.xml,
	  Monodoc.Editor.Gui.mdp: Adding testing framework to
	  Monodoc.Editor.Gui.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Using DocumentTag properties to guide the
	  serialization of the buffer.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
	* DocumentTagTable.cs: Using DocumentTag to define the tags used in the
	  editor, and toggle if they are elements, attributes or has text
	  child nodes.
	* DocumentTag.cs: By default DocumentTags are non Editable.
